ApiArenaXperience/src/main/java/com/example/ApiArenaXperience/error/ActivationExpiredException.java
package com.example.ApiArenaXperience.error;

public class ActivationExpiredException extends RuntimeException {
    public ActivationExpiredException(String s) {
        super(s);
    }
}
